// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FollowListSearch should render 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />
  <View
    style={
      Object {
        "marginBottom": 16,
        "marginHorizontal": 16,
      }
    }
  >
    <View
      disabled={false}
      style={
        Object {
          "overflow": "hidden",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "rgb(249, 249, 251)",
            "borderRadius": 16,
            "flexDirection": "row",
            "flexGrow": 1,
            "overflow": "hidden",
            "paddingLeft": 8,
          }
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={16}
          bbWidth={16}
          color="rgba(39, 39, 46, 0.3)"
          height={16}
          id="Raw"
          meetOrSlice={0}
          minX={0}
          minY={0}
          size={16}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {},
              null,
              Object {
                "flex": 0,
                "height": 16,
                "width": 16,
              },
            ]
          }
          tintColor="rgba(39, 39, 46, 0.3)"
          vbHeight={256.00098}
          vbWidth={256.00098}
          width={16}
        >
          <RNSVGGroup
            fill={
              Array [
                0,
                4278190080,
              ]
            }
            fillOpacity={1}
            fillRule={1}
            font={Object {}}
            matrix={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
            opacity={1}
            originX={0}
            originY={0}
            propList={Array []}
            rotation={0}
            scaleX={1}
            scaleY={1}
            skewX={0}
            skewY={0}
            stroke={null}
            strokeDasharray={null}
            strokeDashoffset={null}
            strokeLinecap={0}
            strokeLinejoin={0}
            strokeMiterlimit={4}
            strokeOpacity={1}
            strokeWidth={1}
            vectorEffect={0}
            x={0}
            y={0}
          >
            <RNSVGRect
              fill={null}
              fillOpacity={1}
              fillRule={1}
              height={256}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={
                Array [
                  "fill",
                ]
              }
              rotation={0}
              rx={0}
              ry={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={null}
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={1}
              vectorEffect={0}
              width={256}
              x={0}
              y={0}
            />
            <RNSVGCircle
              cx={116}
              cy={116}
              fill={null}
              fillOpacity={1}
              fillRule={1}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={
                Array [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              r={84}
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={
                Array [
                  0,
                  1294411566,
                ]
              }
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={16}
              vectorEffect={0}
              x={0}
              y={0}
            />
            <RNSVGLine
              fill={null}
              fillOpacity={1}
              fillRule={1}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={
                Array [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={
                Array [
                  0,
                  1294411566,
                ]
              }
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={16}
              vectorEffect={0}
              x={0}
              x1={175.39356}
              x2={223.99414}
              y={0}
              y1={175.40039}
              y2={224.00098}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <TextInput
          allowFontScaling={true}
          cancelButtonOffset={0}
          editable={true}
          isFocused={false}
          onChangeText={[Function]}
          onFocus={[Function]}
          placeholder="Search"
          placeholderTextColor="rgba(39, 39, 46, 0.3)"
          rejectResponderTermination={true}
          returnKeyType="search"
          selectionColor="#17B582"
          style={
            Object {
              "color": "#27272E",
              "flexGrow": 1,
              "fontFamily": "System",
              "fontSize": 14,
              "height": 40,
              "paddingLeft": 8,
              "paddingRight": 0,
              "paddingTop": 1,
              "paddingVertical": 0,
            }
          }
          underlineColorAndroid="transparent"
          value=""
        />
      </View>
      <View
        style={
          Object {
            "height": "100%",
            "position": "absolute",
            "right": 0,
            "transform": Array [
              Object {
                "translateX": 1000,
              },
            ],
          }
        }
      >
        <View
          screenBackgroundColor="#FFFFFF"
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#FFFFFF",
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "rgb(249, 249, 251)",
                "borderBottomRightRadius": 16,
                "borderColor": "rgb(249, 249, 251)",
                "borderRightWidth": 1,
                "borderTopRightRadius": 16,
                "overflow": "hidden",
              }
            }
          >
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <View
                borderRadius={28}
                iconPadding={12}
                style={
                  Object {
                    "opacity": 0,
                    "padding": 12,
                  }
                }
              >
                <RNSVGSvgView
                  align="xMidYMid"
                  bbHeight={16}
                  bbWidth={16}
                  color="rgba(39, 39, 46, 0.3)"
                  fill="rgba(39, 39, 46, 0.3)"
                  height={16}
                  id="Raw"
                  meetOrSlice={0}
                  minX={0}
                  minY={0}
                  size={16}
                  style={
                    Array [
                      Object {
                        "backgroundColor": "transparent",
                        "borderWidth": 0,
                      },
                      Object {},
                      null,
                      Object {
                        "flex": 0,
                        "height": 16,
                        "width": 16,
                      },
                    ]
                  }
                  tintColor="rgba(39, 39, 46, 0.3)"
                  vbHeight={256}
                  vbWidth={256}
                  width={16}
                >
                  <RNSVGGroup
                    fill={
                      Array [
                        0,
                        1294411566,
                      ]
                    }
                    fillOpacity={1}
                    fillRule={1}
                    font={Object {}}
                    matrix={
                      Array [
                        1,
                        0,
                        0,
                        1,
                        0,
                        0,
                      ]
                    }
                    opacity={1}
                    originX={0}
                    originY={0}
                    propList={
                      Array [
                        "fill",
                      ]
                    }
                    rotation={0}
                    scaleX={1}
                    scaleY={1}
                    skewX={0}
                    skewY={0}
                    stroke={null}
                    strokeDasharray={null}
                    strokeDashoffset={null}
                    strokeLinecap={0}
                    strokeLinejoin={0}
                    strokeMiterlimit={4}
                    strokeOpacity={1}
                    strokeWidth={1}
                    vectorEffect={0}
                    x={0}
                    y={0}
                  >
                    <RNSVGRect
                      fill={null}
                      fillOpacity={1}
                      fillRule={1}
                      height={256}
                      matrix={
                        Array [
                          1,
                          0,
                          0,
                          1,
                          0,
                          0,
                        ]
                      }
                      opacity={1}
                      originX={0}
                      originY={0}
                      propList={
                        Array [
                          "fill",
                        ]
                      }
                      rotation={0}
                      rx={0}
                      ry={0}
                      scaleX={1}
                      scaleY={1}
                      skewX={0}
                      skewY={0}
                      stroke={null}
                      strokeDasharray={null}
                      strokeDashoffset={null}
                      strokeLinecap={0}
                      strokeLinejoin={0}
                      strokeMiterlimit={4}
                      strokeOpacity={1}
                      strokeWidth={1}
                      vectorEffect={0}
                      width={256}
                      x={0}
                      y={0}
                    />
                    <RNSVGPath
                      d="M128,24A104,104,0,1,0,232,128,104.12041,104.12041,0,0,0,128,24Zm37.65625,130.34375a7.99915,7.99915,0,1,1-11.3125,11.3125L128,139.3125l-26.34375,26.34375a7.99915,7.99915,0,0,1-11.3125-11.3125L116.6875,128,90.34375,101.65625a7.99915,7.99915,0,0,1,11.3125-11.3125L128,116.6875l26.34375-26.34375a7.99915,7.99915,0,0,1,11.3125,11.3125L139.3125,128Z"
                      fill={
                        Array [
                          0,
                          4278190080,
                        ]
                      }
                      fillOpacity={1}
                      fillRule={1}
                      matrix={
                        Array [
                          1,
                          0,
                          0,
                          1,
                          0,
                          0,
                        ]
                      }
                      opacity={1}
                      originX={0}
                      originY={0}
                      propList={Array []}
                      rotation={0}
                      scaleX={1}
                      scaleY={1}
                      skewX={0}
                      skewY={0}
                      stroke={null}
                      strokeDasharray={null}
                      strokeDashoffset={null}
                      strokeLinecap={0}
                      strokeLinejoin={0}
                      strokeMiterlimit={4}
                      strokeOpacity={1}
                      strokeWidth={1}
                      vectorEffect={0}
                      x={0}
                      y={0}
                    />
                  </RNSVGGroup>
                </RNSVGSvgView>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <RCTScrollView
    style={
      Object {
        "height": "90%",
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "paddingVertical": 64,
          }
        }
      />
    </View>
  </RCTScrollView>
</View>
`;

exports[`FollowListSearch should render a modal 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    visible={false}
  >
    <View
      style={
        Object {
          "backgroundColor": "rgb(249, 249, 251)",
          "flex": 1,
          "height": "100%",
        }
      }
    >
      <RCTSafeAreaView
        emulateUnlessSupported={true}
      >
        <View
          style={
            Object {
              "backgroundColor": "#FFFFFF",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "height": 64,
                "justifyContent": "space-between",
                "padding": 16,
                "width": "100%",
              }
            }
          >
            <View
              accessible={true}
              focusable={false}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "minWidth": 48,
                  "opacity": 1,
                }
              }
            >
              <Text
                numberOfLines={1}
                style={
                  Object {
                    "color": "#17B582",
                    "fontSize": 16,
                    "fontWeight": undefined,
                    "lineHeight": 24,
                    "textAlign": "right",
                  }
                }
              />
            </View>
            <Text
              style={
                Object {
                  "color": "#27272E",
                  "fontFamily": "InterUI-Bold",
                  "fontSize": 16,
                  "lineHeight": 24,
                }
              }
            >
              Find People to Follow
            </Text>
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "minWidth": 48,
                  "opacity": 1,
                }
              }
            >
              <Text
                numberOfLines={1}
                strong={true}
                style={
                  Object {
                    "color": "#17B582",
                    "fontSize": 16,
                    "fontWeight": "bold",
                    "lineHeight": 24,
                    "textAlign": "right",
                  }
                }
              >
                Done
              </Text>
            </View>
          </View>
          <View
            style={
              Object {
                "marginBottom": 16,
                "marginHorizontal": 16,
              }
            }
          >
            <View
              disabled={false}
              style={
                Object {
                  "overflow": "hidden",
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "rgb(249, 249, 251)",
                    "borderRadius": 16,
                    "flexDirection": "row",
                    "flexGrow": 1,
                    "overflow": "hidden",
                    "paddingLeft": 8,
                  }
                }
              >
                <RNSVGSvgView
                  align="xMidYMid"
                  bbHeight={16}
                  bbWidth={16}
                  color="rgba(39, 39, 46, 0.3)"
                  height={16}
                  id="Raw"
                  meetOrSlice={0}
                  minX={0}
                  minY={0}
                  size={16}
                  style={
                    Array [
                      Object {
                        "backgroundColor": "transparent",
                        "borderWidth": 0,
                      },
                      Object {},
                      null,
                      Object {
                        "flex": 0,
                        "height": 16,
                        "width": 16,
                      },
                    ]
                  }
                  tintColor="rgba(39, 39, 46, 0.3)"
                  vbHeight={256.00098}
                  vbWidth={256.00098}
                  width={16}
                >
                  <RNSVGGroup
                    fill={
                      Array [
                        0,
                        4278190080,
                      ]
                    }
                    fillOpacity={1}
                    fillRule={1}
                    font={Object {}}
                    matrix={
                      Array [
                        1,
                        0,
                        0,
                        1,
                        0,
                        0,
                      ]
                    }
                    opacity={1}
                    originX={0}
                    originY={0}
                    propList={Array []}
                    rotation={0}
                    scaleX={1}
                    scaleY={1}
                    skewX={0}
                    skewY={0}
                    stroke={null}
                    strokeDasharray={null}
                    strokeDashoffset={null}
                    strokeLinecap={0}
                    strokeLinejoin={0}
                    strokeMiterlimit={4}
                    strokeOpacity={1}
                    strokeWidth={1}
                    vectorEffect={0}
                    x={0}
                    y={0}
                  >
                    <RNSVGRect
                      fill={null}
                      fillOpacity={1}
                      fillRule={1}
                      height={256}
                      matrix={
                        Array [
                          1,
                          0,
                          0,
                          1,
                          0,
                          0,
                        ]
                      }
                      opacity={1}
                      originX={0}
                      originY={0}
                      propList={
                        Array [
                          "fill",
                        ]
                      }
                      rotation={0}
                      rx={0}
                      ry={0}
                      scaleX={1}
                      scaleY={1}
                      skewX={0}
                      skewY={0}
                      stroke={null}
                      strokeDasharray={null}
                      strokeDashoffset={null}
                      strokeLinecap={0}
                      strokeLinejoin={0}
                      strokeMiterlimit={4}
                      strokeOpacity={1}
                      strokeWidth={1}
                      vectorEffect={0}
                      width={256}
                      x={0}
                      y={0}
                    />
                    <RNSVGCircle
                      cx={116}
                      cy={116}
                      fill={null}
                      fillOpacity={1}
                      fillRule={1}
                      matrix={
                        Array [
                          1,
                          0,
                          0,
                          1,
                          0,
                          0,
                        ]
                      }
                      opacity={1}
                      originX={0}
                      originY={0}
                      propList={
                        Array [
                          "fill",
                          "stroke",
                          "strokeWidth",
                          "strokeLinecap",
                          "strokeLinejoin",
                        ]
                      }
                      r={84}
                      rotation={0}
                      scaleX={1}
                      scaleY={1}
                      skewX={0}
                      skewY={0}
                      stroke={
                        Array [
                          0,
                          1294411566,
                        ]
                      }
                      strokeDasharray={null}
                      strokeDashoffset={null}
                      strokeLinecap={1}
                      strokeLinejoin={1}
                      strokeMiterlimit={4}
                      strokeOpacity={1}
                      strokeWidth={16}
                      vectorEffect={0}
                      x={0}
                      y={0}
                    />
                    <RNSVGLine
                      fill={null}
                      fillOpacity={1}
                      fillRule={1}
                      matrix={
                        Array [
                          1,
                          0,
                          0,
                          1,
                          0,
                          0,
                        ]
                      }
                      opacity={1}
                      originX={0}
                      originY={0}
                      propList={
                        Array [
                          "fill",
                          "stroke",
                          "strokeWidth",
                          "strokeLinecap",
                          "strokeLinejoin",
                        ]
                      }
                      rotation={0}
                      scaleX={1}
                      scaleY={1}
                      skewX={0}
                      skewY={0}
                      stroke={
                        Array [
                          0,
                          1294411566,
                        ]
                      }
                      strokeDasharray={null}
                      strokeDashoffset={null}
                      strokeLinecap={1}
                      strokeLinejoin={1}
                      strokeMiterlimit={4}
                      strokeOpacity={1}
                      strokeWidth={16}
                      vectorEffect={0}
                      x={0}
                      x1={175.39356}
                      x2={223.99414}
                      y={0}
                      y1={175.40039}
                      y2={224.00098}
                    />
                  </RNSVGGroup>
                </RNSVGSvgView>
                <TextInput
                  allowFontScaling={true}
                  cancelButtonOffset={0}
                  editable={true}
                  isFocused={false}
                  onChangeText={[Function]}
                  onFocus={[Function]}
                  placeholder="Search"
                  placeholderTextColor="rgba(39, 39, 46, 0.3)"
                  rejectResponderTermination={true}
                  returnKeyType="search"
                  selectionColor="#17B582"
                  style={
                    Object {
                      "color": "#27272E",
                      "flexGrow": 1,
                      "fontFamily": "System",
                      "fontSize": 14,
                      "height": 40,
                      "paddingLeft": 8,
                      "paddingRight": 0,
                      "paddingTop": 1,
                      "paddingVertical": 0,
                    }
                  }
                  underlineColorAndroid="transparent"
                  value=""
                />
              </View>
              <View
                style={
                  Object {
                    "height": "100%",
                    "position": "absolute",
                    "right": 0,
                    "transform": Array [
                      Object {
                        "translateX": 1000,
                      },
                    ],
                  }
                }
              >
                <View
                  screenBackgroundColor="#FFFFFF"
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#FFFFFF",
                      "flexDirection": "row",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "backgroundColor": "rgb(249, 249, 251)",
                        "borderBottomRightRadius": 16,
                        "borderColor": "rgb(249, 249, 251)",
                        "borderRightWidth": 1,
                        "borderTopRightRadius": 16,
                        "overflow": "hidden",
                      }
                    }
                  >
                    <View
                      accessible={true}
                      focusable={true}
                      onClick={[Function]}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        Object {
                          "opacity": 1,
                        }
                      }
                    >
                      <View
                        borderRadius={28}
                        iconPadding={12}
                        style={
                          Object {
                            "opacity": 0,
                            "padding": 12,
                          }
                        }
                      >
                        <RNSVGSvgView
                          align="xMidYMid"
                          bbHeight={16}
                          bbWidth={16}
                          color="rgba(39, 39, 46, 0.3)"
                          fill="rgba(39, 39, 46, 0.3)"
                          height={16}
                          id="Raw"
                          meetOrSlice={0}
                          minX={0}
                          minY={0}
                          size={16}
                          style={
                            Array [
                              Object {
                                "backgroundColor": "transparent",
                                "borderWidth": 0,
                              },
                              Object {},
                              null,
                              Object {
                                "flex": 0,
                                "height": 16,
                                "width": 16,
                              },
                            ]
                          }
                          tintColor="rgba(39, 39, 46, 0.3)"
                          vbHeight={256}
                          vbWidth={256}
                          width={16}
                        >
                          <RNSVGGroup
                            fill={
                              Array [
                                0,
                                1294411566,
                              ]
                            }
                            fillOpacity={1}
                            fillRule={1}
                            font={Object {}}
                            matrix={
                              Array [
                                1,
                                0,
                                0,
                                1,
                                0,
                                0,
                              ]
                            }
                            opacity={1}
                            originX={0}
                            originY={0}
                            propList={
                              Array [
                                "fill",
                              ]
                            }
                            rotation={0}
                            scaleX={1}
                            scaleY={1}
                            skewX={0}
                            skewY={0}
                            stroke={null}
                            strokeDasharray={null}
                            strokeDashoffset={null}
                            strokeLinecap={0}
                            strokeLinejoin={0}
                            strokeMiterlimit={4}
                            strokeOpacity={1}
                            strokeWidth={1}
                            vectorEffect={0}
                            x={0}
                            y={0}
                          >
                            <RNSVGRect
                              fill={null}
                              fillOpacity={1}
                              fillRule={1}
                              height={256}
                              matrix={
                                Array [
                                  1,
                                  0,
                                  0,
                                  1,
                                  0,
                                  0,
                                ]
                              }
                              opacity={1}
                              originX={0}
                              originY={0}
                              propList={
                                Array [
                                  "fill",
                                ]
                              }
                              rotation={0}
                              rx={0}
                              ry={0}
                              scaleX={1}
                              scaleY={1}
                              skewX={0}
                              skewY={0}
                              stroke={null}
                              strokeDasharray={null}
                              strokeDashoffset={null}
                              strokeLinecap={0}
                              strokeLinejoin={0}
                              strokeMiterlimit={4}
                              strokeOpacity={1}
                              strokeWidth={1}
                              vectorEffect={0}
                              width={256}
                              x={0}
                              y={0}
                            />
                            <RNSVGPath
                              d="M128,24A104,104,0,1,0,232,128,104.12041,104.12041,0,0,0,128,24Zm37.65625,130.34375a7.99915,7.99915,0,1,1-11.3125,11.3125L128,139.3125l-26.34375,26.34375a7.99915,7.99915,0,0,1-11.3125-11.3125L116.6875,128,90.34375,101.65625a7.99915,7.99915,0,0,1,11.3125-11.3125L128,116.6875l26.34375-26.34375a7.99915,7.99915,0,0,1,11.3125,11.3125L139.3125,128Z"
                              fill={
                                Array [
                                  0,
                                  4278190080,
                                ]
                              }
                              fillOpacity={1}
                              fillRule={1}
                              matrix={
                                Array [
                                  1,
                                  0,
                                  0,
                                  1,
                                  0,
                                  0,
                                ]
                              }
                              opacity={1}
                              originX={0}
                              originY={0}
                              propList={Array []}
                              rotation={0}
                              scaleX={1}
                              scaleY={1}
                              skewX={0}
                              skewY={0}
                              stroke={null}
                              strokeDasharray={null}
                              strokeDashoffset={null}
                              strokeLinecap={0}
                              strokeLinejoin={0}
                              strokeMiterlimit={4}
                              strokeOpacity={1}
                              strokeWidth={1}
                              vectorEffect={0}
                              x={0}
                              y={0}
                            />
                          </RNSVGGroup>
                        </RNSVGSvgView>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <RCTScrollView
            style={
              Object {
                "height": "90%",
              }
            }
          >
            <View>
              <View
                style={
                  Object {
                    "paddingVertical": 64,
                  }
                }
              />
            </View>
          </RCTScrollView>
        </View>
      </RCTSafeAreaView>
    </View>
  </Modal>
</View>
`;

exports[`FollowListSearch should render followers 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />
  <View
    style={
      Object {
        "marginBottom": 16,
        "marginHorizontal": 16,
      }
    }
  >
    <View
      disabled={false}
      style={
        Object {
          "overflow": "hidden",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "rgb(249, 249, 251)",
            "borderRadius": 16,
            "flexDirection": "row",
            "flexGrow": 1,
            "overflow": "hidden",
            "paddingLeft": 8,
          }
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={16}
          bbWidth={16}
          color="rgba(39, 39, 46, 0.3)"
          height={16}
          id="Raw"
          meetOrSlice={0}
          minX={0}
          minY={0}
          size={16}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {},
              null,
              Object {
                "flex": 0,
                "height": 16,
                "width": 16,
              },
            ]
          }
          tintColor="rgba(39, 39, 46, 0.3)"
          vbHeight={256.00098}
          vbWidth={256.00098}
          width={16}
        >
          <RNSVGGroup
            fill={
              Array [
                0,
                4278190080,
              ]
            }
            fillOpacity={1}
            fillRule={1}
            font={Object {}}
            matrix={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
            opacity={1}
            originX={0}
            originY={0}
            propList={Array []}
            rotation={0}
            scaleX={1}
            scaleY={1}
            skewX={0}
            skewY={0}
            stroke={null}
            strokeDasharray={null}
            strokeDashoffset={null}
            strokeLinecap={0}
            strokeLinejoin={0}
            strokeMiterlimit={4}
            strokeOpacity={1}
            strokeWidth={1}
            vectorEffect={0}
            x={0}
            y={0}
          >
            <RNSVGRect
              fill={null}
              fillOpacity={1}
              fillRule={1}
              height={256}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={
                Array [
                  "fill",
                ]
              }
              rotation={0}
              rx={0}
              ry={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={null}
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={1}
              vectorEffect={0}
              width={256}
              x={0}
              y={0}
            />
            <RNSVGCircle
              cx={116}
              cy={116}
              fill={null}
              fillOpacity={1}
              fillRule={1}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={
                Array [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              r={84}
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={
                Array [
                  0,
                  1294411566,
                ]
              }
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={16}
              vectorEffect={0}
              x={0}
              y={0}
            />
            <RNSVGLine
              fill={null}
              fillOpacity={1}
              fillRule={1}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={
                Array [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={
                Array [
                  0,
                  1294411566,
                ]
              }
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={16}
              vectorEffect={0}
              x={0}
              x1={175.39356}
              x2={223.99414}
              y={0}
              y1={175.40039}
              y2={224.00098}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <TextInput
          allowFontScaling={true}
          cancelButtonOffset={0}
          editable={true}
          isFocused={false}
          onChangeText={[Function]}
          onFocus={[Function]}
          placeholder="Search"
          placeholderTextColor="rgba(39, 39, 46, 0.3)"
          rejectResponderTermination={true}
          returnKeyType="search"
          selectionColor="#17B582"
          style={
            Object {
              "color": "#27272E",
              "flexGrow": 1,
              "fontFamily": "System",
              "fontSize": 14,
              "height": 40,
              "paddingLeft": 8,
              "paddingRight": 0,
              "paddingTop": 1,
              "paddingVertical": 0,
            }
          }
          underlineColorAndroid="transparent"
          value=""
        />
      </View>
      <View
        style={
          Object {
            "height": "100%",
            "position": "absolute",
            "right": 0,
            "transform": Array [
              Object {
                "translateX": 1000,
              },
            ],
          }
        }
      >
        <View
          screenBackgroundColor="#FFFFFF"
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#FFFFFF",
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "rgb(249, 249, 251)",
                "borderBottomRightRadius": 16,
                "borderColor": "rgb(249, 249, 251)",
                "borderRightWidth": 1,
                "borderTopRightRadius": 16,
                "overflow": "hidden",
              }
            }
          >
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <View
                borderRadius={28}
                iconPadding={12}
                style={
                  Object {
                    "opacity": 0,
                    "padding": 12,
                  }
                }
              >
                <RNSVGSvgView
                  align="xMidYMid"
                  bbHeight={16}
                  bbWidth={16}
                  color="rgba(39, 39, 46, 0.3)"
                  fill="rgba(39, 39, 46, 0.3)"
                  height={16}
                  id="Raw"
                  meetOrSlice={0}
                  minX={0}
                  minY={0}
                  size={16}
                  style={
                    Array [
                      Object {
                        "backgroundColor": "transparent",
                        "borderWidth": 0,
                      },
                      Object {},
                      null,
                      Object {
                        "flex": 0,
                        "height": 16,
                        "width": 16,
                      },
                    ]
                  }
                  tintColor="rgba(39, 39, 46, 0.3)"
                  vbHeight={256}
                  vbWidth={256}
                  width={16}
                >
                  <RNSVGGroup
                    fill={
                      Array [
                        0,
                        1294411566,
                      ]
                    }
                    fillOpacity={1}
                    fillRule={1}
                    font={Object {}}
                    matrix={
                      Array [
                        1,
                        0,
                        0,
                        1,
                        0,
                        0,
                      ]
                    }
                    opacity={1}
                    originX={0}
                    originY={0}
                    propList={
                      Array [
                        "fill",
                      ]
                    }
                    rotation={0}
                    scaleX={1}
                    scaleY={1}
                    skewX={0}
                    skewY={0}
                    stroke={null}
                    strokeDasharray={null}
                    strokeDashoffset={null}
                    strokeLinecap={0}
                    strokeLinejoin={0}
                    strokeMiterlimit={4}
                    strokeOpacity={1}
                    strokeWidth={1}
                    vectorEffect={0}
                    x={0}
                    y={0}
                  >
                    <RNSVGRect
                      fill={null}
                      fillOpacity={1}
                      fillRule={1}
                      height={256}
                      matrix={
                        Array [
                          1,
                          0,
                          0,
                          1,
                          0,
                          0,
                        ]
                      }
                      opacity={1}
                      originX={0}
                      originY={0}
                      propList={
                        Array [
                          "fill",
                        ]
                      }
                      rotation={0}
                      rx={0}
                      ry={0}
                      scaleX={1}
                      scaleY={1}
                      skewX={0}
                      skewY={0}
                      stroke={null}
                      strokeDasharray={null}
                      strokeDashoffset={null}
                      strokeLinecap={0}
                      strokeLinejoin={0}
                      strokeMiterlimit={4}
                      strokeOpacity={1}
                      strokeWidth={1}
                      vectorEffect={0}
                      width={256}
                      x={0}
                      y={0}
                    />
                    <RNSVGPath
                      d="M128,24A104,104,0,1,0,232,128,104.12041,104.12041,0,0,0,128,24Zm37.65625,130.34375a7.99915,7.99915,0,1,1-11.3125,11.3125L128,139.3125l-26.34375,26.34375a7.99915,7.99915,0,0,1-11.3125-11.3125L116.6875,128,90.34375,101.65625a7.99915,7.99915,0,0,1,11.3125-11.3125L128,116.6875l26.34375-26.34375a7.99915,7.99915,0,0,1,11.3125,11.3125L139.3125,128Z"
                      fill={
                        Array [
                          0,
                          4278190080,
                        ]
                      }
                      fillOpacity={1}
                      fillRule={1}
                      matrix={
                        Array [
                          1,
                          0,
                          0,
                          1,
                          0,
                          0,
                        ]
                      }
                      opacity={1}
                      originX={0}
                      originY={0}
                      propList={Array []}
                      rotation={0}
                      scaleX={1}
                      scaleY={1}
                      skewX={0}
                      skewY={0}
                      stroke={null}
                      strokeDasharray={null}
                      strokeDashoffset={null}
                      strokeLinecap={0}
                      strokeLinejoin={0}
                      strokeMiterlimit={4}
                      strokeOpacity={1}
                      strokeWidth={1}
                      vectorEffect={0}
                      x={0}
                      y={0}
                    />
                  </RNSVGGroup>
                </RNSVGSvgView>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <RCTScrollView
    style={
      Object {
        "height": "90%",
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "marginBottom": 16,
            "paddingHorizontal": 16,
            "paddingVertical": 16,
          }
        }
      >
        <View
          style={
            Object {
              "marginBottom": 16,
            }
          }
        />
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "flex-start",
              "marginBottom": 16,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "height": 64,
                "justifyContent": "center",
                "marginRight": 16,
                "width": 64,
              }
            }
            themeSize={64}
          >
            <View
              backgroundColor="hsl(217, 40%, 60%)"
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "hsl(217, 40%, 60%)",
                  "borderRadius": 64,
                  "height": 64,
                  "justifyContent": "center",
                  "width": 64,
                }
              }
              themeSize={64}
            >
              <Text
                style={
                  Object {
                    "color": "rgb(249, 249, 251)",
                    "fontFamily": "InterUI-Bold",
                    "fontSize": 32,
                  }
                }
                themeSize={64}
              >
                JS
              </Text>
            </View>
          </View>
          <View
            style={
              Object {
                "flex": 1,
                "justifyContent": "center",
              }
            }
          >
            <Text
              numberOfLines={1}
              style={
                Object {
                  "color": "#27272E",
                  "fontFamily": "InterUI-Medium",
                  "fontSize": 14,
                  "lineHeight": 21,
                }
              }
            >
              Joe Schmoe
            </Text>
          </View>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              bordered={false}
              disabled={false}
              pill={false}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#17B582",
                  "borderColor": "#17B582",
                  "borderRadius": 8,
                  "borderWidth": 0.5,
                  "flexDirection": "row",
                  "height": 32,
                  "justifyContent": "center",
                  "marginLeft": 8,
                  "opacity": 1,
                  "overflow": "hidden",
                  "paddingHorizontal": 8,
                  "shadowColor": "rgba(0, 0, 0, 0.040000000000000036)",
                  "shadowOffset": Object {
                    "height": 2,
                    "width": 0,
                  },
                  "shadowOpacity": 1,
                  "shadowRadius": 8,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#F4F7F8",
                    "fontFamily": "InterUI-Bold",
                    "fontSize": 12,
                    "lineHeight": 18,
                  }
                }
              >
                Follow
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "paddingVertical": 64,
          }
        }
      />
    </View>
  </RCTScrollView>
</View>
`;

exports[`FollowListSearch should render with a search function 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />
  <View
    style={
      Object {
        "marginBottom": 16,
        "marginHorizontal": 16,
      }
    }
  >
    <View
      disabled={false}
      style={
        Object {
          "overflow": "hidden",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "rgb(249, 249, 251)",
            "borderRadius": 16,
            "flexDirection": "row",
            "flexGrow": 1,
            "overflow": "hidden",
            "paddingLeft": 8,
          }
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={16}
          bbWidth={16}
          color="rgba(39, 39, 46, 0.3)"
          height={16}
          id="Raw"
          meetOrSlice={0}
          minX={0}
          minY={0}
          size={16}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {},
              null,
              Object {
                "flex": 0,
                "height": 16,
                "width": 16,
              },
            ]
          }
          tintColor="rgba(39, 39, 46, 0.3)"
          vbHeight={256.00098}
          vbWidth={256.00098}
          width={16}
        >
          <RNSVGGroup
            fill={
              Array [
                0,
                4278190080,
              ]
            }
            fillOpacity={1}
            fillRule={1}
            font={Object {}}
            matrix={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
            opacity={1}
            originX={0}
            originY={0}
            propList={Array []}
            rotation={0}
            scaleX={1}
            scaleY={1}
            skewX={0}
            skewY={0}
            stroke={null}
            strokeDasharray={null}
            strokeDashoffset={null}
            strokeLinecap={0}
            strokeLinejoin={0}
            strokeMiterlimit={4}
            strokeOpacity={1}
            strokeWidth={1}
            vectorEffect={0}
            x={0}
            y={0}
          >
            <RNSVGRect
              fill={null}
              fillOpacity={1}
              fillRule={1}
              height={256}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={
                Array [
                  "fill",
                ]
              }
              rotation={0}
              rx={0}
              ry={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={null}
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={1}
              vectorEffect={0}
              width={256}
              x={0}
              y={0}
            />
            <RNSVGCircle
              cx={116}
              cy={116}
              fill={null}
              fillOpacity={1}
              fillRule={1}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={
                Array [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              r={84}
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={
                Array [
                  0,
                  1294411566,
                ]
              }
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={16}
              vectorEffect={0}
              x={0}
              y={0}
            />
            <RNSVGLine
              fill={null}
              fillOpacity={1}
              fillRule={1}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={
                Array [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={
                Array [
                  0,
                  1294411566,
                ]
              }
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={16}
              vectorEffect={0}
              x={0}
              x1={175.39356}
              x2={223.99414}
              y={0}
              y1={175.40039}
              y2={224.00098}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <TextInput
          allowFontScaling={true}
          cancelButtonOffset={0}
          editable={true}
          isFocused={false}
          onChangeText={[Function]}
          onFocus={[Function]}
          placeholder="Search"
          placeholderTextColor="rgba(39, 39, 46, 0.3)"
          rejectResponderTermination={true}
          returnKeyType="search"
          selectionColor="#17B582"
          style={
            Object {
              "color": "#27272E",
              "flexGrow": 1,
              "fontFamily": "System",
              "fontSize": 14,
              "height": 40,
              "paddingLeft": 8,
              "paddingRight": 0,
              "paddingTop": 1,
              "paddingVertical": 0,
            }
          }
          underlineColorAndroid="transparent"
          value=""
        />
      </View>
      <View
        style={
          Object {
            "height": "100%",
            "position": "absolute",
            "right": 0,
            "transform": Array [
              Object {
                "translateX": 1000,
              },
            ],
          }
        }
      >
        <View
          screenBackgroundColor="#FFFFFF"
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#FFFFFF",
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "rgb(249, 249, 251)",
                "borderBottomRightRadius": 16,
                "borderColor": "rgb(249, 249, 251)",
                "borderRightWidth": 1,
                "borderTopRightRadius": 16,
                "overflow": "hidden",
              }
            }
          >
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <View
                borderRadius={28}
                iconPadding={12}
                style={
                  Object {
                    "opacity": 0,
                    "padding": 12,
                  }
                }
              >
                <RNSVGSvgView
                  align="xMidYMid"
                  bbHeight={16}
                  bbWidth={16}
                  color="rgba(39, 39, 46, 0.3)"
                  fill="rgba(39, 39, 46, 0.3)"
                  height={16}
                  id="Raw"
                  meetOrSlice={0}
                  minX={0}
                  minY={0}
                  size={16}
                  style={
                    Array [
                      Object {
                        "backgroundColor": "transparent",
                        "borderWidth": 0,
                      },
                      Object {},
                      null,
                      Object {
                        "flex": 0,
                        "height": 16,
                        "width": 16,
                      },
                    ]
                  }
                  tintColor="rgba(39, 39, 46, 0.3)"
                  vbHeight={256}
                  vbWidth={256}
                  width={16}
                >
                  <RNSVGGroup
                    fill={
                      Array [
                        0,
                        1294411566,
                      ]
                    }
                    fillOpacity={1}
                    fillRule={1}
                    font={Object {}}
                    matrix={
                      Array [
                        1,
                        0,
                        0,
                        1,
                        0,
                        0,
                      ]
                    }
                    opacity={1}
                    originX={0}
                    originY={0}
                    propList={
                      Array [
                        "fill",
                      ]
                    }
                    rotation={0}
                    scaleX={1}
                    scaleY={1}
                    skewX={0}
                    skewY={0}
                    stroke={null}
                    strokeDasharray={null}
                    strokeDashoffset={null}
                    strokeLinecap={0}
                    strokeLinejoin={0}
                    strokeMiterlimit={4}
                    strokeOpacity={1}
                    strokeWidth={1}
                    vectorEffect={0}
                    x={0}
                    y={0}
                  >
                    <RNSVGRect
                      fill={null}
                      fillOpacity={1}
                      fillRule={1}
                      height={256}
                      matrix={
                        Array [
                          1,
                          0,
                          0,
                          1,
                          0,
                          0,
                        ]
                      }
                      opacity={1}
                      originX={0}
                      originY={0}
                      propList={
                        Array [
                          "fill",
                        ]
                      }
                      rotation={0}
                      rx={0}
                      ry={0}
                      scaleX={1}
                      scaleY={1}
                      skewX={0}
                      skewY={0}
                      stroke={null}
                      strokeDasharray={null}
                      strokeDashoffset={null}
                      strokeLinecap={0}
                      strokeLinejoin={0}
                      strokeMiterlimit={4}
                      strokeOpacity={1}
                      strokeWidth={1}
                      vectorEffect={0}
                      width={256}
                      x={0}
                      y={0}
                    />
                    <RNSVGPath
                      d="M128,24A104,104,0,1,0,232,128,104.12041,104.12041,0,0,0,128,24Zm37.65625,130.34375a7.99915,7.99915,0,1,1-11.3125,11.3125L128,139.3125l-26.34375,26.34375a7.99915,7.99915,0,0,1-11.3125-11.3125L116.6875,128,90.34375,101.65625a7.99915,7.99915,0,0,1,11.3125-11.3125L128,116.6875l26.34375-26.34375a7.99915,7.99915,0,0,1,11.3125,11.3125L139.3125,128Z"
                      fill={
                        Array [
                          0,
                          4278190080,
                        ]
                      }
                      fillOpacity={1}
                      fillRule={1}
                      matrix={
                        Array [
                          1,
                          0,
                          0,
                          1,
                          0,
                          0,
                        ]
                      }
                      opacity={1}
                      originX={0}
                      originY={0}
                      propList={Array []}
                      rotation={0}
                      scaleX={1}
                      scaleY={1}
                      skewX={0}
                      skewY={0}
                      stroke={null}
                      strokeDasharray={null}
                      strokeDashoffset={null}
                      strokeLinecap={0}
                      strokeLinejoin={0}
                      strokeMiterlimit={4}
                      strokeOpacity={1}
                      strokeWidth={1}
                      vectorEffect={0}
                      x={0}
                      y={0}
                    />
                  </RNSVGGroup>
                </RNSVGSvgView>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <RCTScrollView
    style={
      Object {
        "height": "90%",
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "paddingVertical": 64,
          }
        }
      />
    </View>
  </RCTScrollView>
</View>
`;
